// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`event.filterMap event.filterMap should drop undefined values: evenNum event graph 1`] = `
"Node {
  seq: [],
  next: [
    Node {
      seq: [
        compute: x => x,
        run: watcher
      ],
      next: [
        Node {
          seq: [
            compute: Function,
            run: watcher
          ],
          next: [
            Node {
              seq: [
                compute: Function
              ],
              next: [
                Node {
                  seq: [
                    check: defined,
                    update: {
                      store: {
                        state: false
                      }
                    },
                    check: changed,
                    update: {
                      store: {
                        state: false
                      }
                    }
                  ],
                  next: [
                    Node {seq: [], next: []}
                  ]
                }
              ]
            }
          ]
        }
      ]
    }
  ]
}"
`;

exports[`event.filterMap event.filterMap should drop undefined values: num event graph 1`] = `
"Node {
  seq: [],
  next: [
    Node {
      seq: [
        compute: Function,
        check: defined
      ],
      next: [
        Node {
          seq: [],
          next: [
            Node {
              seq: [
                compute: x => x,
                run: watcher
              ],
              next: [
                Node {
                  seq: [
                    compute: Function,
                    run: watcher
                  ],
                  next: [
                    Node {
                      seq: [
                        compute: Function
                      ],
                      next: [
                        Node {
                          seq: [
                            check: defined,
                            update: {
                              store: {
                                state: false
                              }
                            },
                            check: changed,
                            update: {
                              store: {
                                state: false
                              }
                            }
                          ],
                          next: [
                            Node {seq: [], next: []}
                          ]
                        }
                      ]
                    }
                  ]
                }
              ]
            }
          ]
        }
      ]
    }
  ]
}"
`;
